--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8" />
 </head>
 <body>
-
-<script type="text/javascript" src="test.js"></script>
+</br>
+<script type="text/javascript" src="~/Documents/School/Scalable Data Infrastructures/Project II/paragraph.js"></script>
 </body>
 </html>
